--- a/project1_casey.ipynb
+++ b/project1_casey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,16 +79,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_25365/2603396742.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_26564/2603396742.py:4: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data['Price'] = data['Price'].str.replace('$', '')\n",
-      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_25365/2603396742.py:19: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/bm/7gfzqmk92w7f0g15qhnh3_1h0000gn/T/ipykernel_26564/2603396742.py:19: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data['Price(per sqft)'] = data['Price(per sqft)'].str.replace('$', '')\n"
      ]
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +848,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "INTERPRETATION OF ABOVE: #OLS Regression - look for evidence of statistically significant correlation between bedrooms and property price"
+    "The R-squared value from the OLS regression is a statistical measure representing the proportion of the variance for property price (dependent variable) explained by the number of bedrooms (independent variable). With a value of 0.2854, we see that approximately 28.54% of the variability in property prices can be explained by the number of bedrooms.\n",
+    "\n",
+    "Additionally, the p-value is a statistical test to determine whether there is a relationship between two variables. In this case, we are looking at if there is a relationship between the number of bedrooms and property price. Due to the number of 6.301769648197888e-20, we see there is a statistically significant relationship because of how small the p-value is. This means we have strong enough evidence to reject the null hypothesis that there is no relationship between these two variables.\n",
+    "\n",
+    "\n",
+    "In summary, the analysis using linear regression suggests that the number of bedrooms has a statistically significant correlation with property price, and the model explains approximately 28.54% of the variability in property prices based on the number of bedrooms."
    ]
   },
   {
@@ -882,6 +887,13 @@
     "jg.plot(sns.regplot, sns.histplot)\n",
     "plt.xlabel(\"Number of Beds\")\n",
     "plt.ylabel(\"Price ($)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## INTERP"
    ]
   },
   {
@@ -1093,8 +1105,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### IDK HOW NECESSARY THIS IS\n",
+    "dfb_Intercept and dfb_Beds: These columns represent the change in the fitted values (predicted property prices) for the intercept and the number of bedrooms when the corresponding data point is excluded. For example, positive values indicate an increase in the predicted property price, and negative values indicate a decrease.\n",
     "\n",
-    "INTERPRETATIONS: Regression Plot - visualize our regression results with a scatterplot and a line of best fit to graphically display correlation\n"
+    "cooks_d: Cook's distance is a measure of the influence of each data point on the regression coefficients. Larger values of Cook's distance indicate greater influence. In this context, the threshold for considering a point influential often depends on the specific problem or the scale of the data.\n",
+    "\n",
+    "standard_resid and student_resid: These columns represent the standardized residuals and studentized residuals, respectively. Residuals measure the vertical distance between observed and predicted values. Large residuals may indicate influential points.\n",
+    "\n",
+    "hat_diag: The hat diagonal elements represent the leverage of each data point. High leverage points can have a strong impact on the regression coefficients.\n",
+    "\n",
+    "dffits_internal and dffits: These columns provide measures of the change in the fitted values when the corresponding data point is excluded. Larger values indicate greater influence."
    ]
   },
   {
@@ -1420,17 +1440,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 232,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "data = data.rename(columns={'A/C': 'Air_Condition'})\n"
+    "### Note: converting air condition below to numeric values with 0 representing 'No', 1 representing 'Cooling', and 2 representing 'heating and cooling'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data.rename(columns={'A/C': 'Air_Condition'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1445,21 +1472,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Air_Condition'] = data['Air_Condition'].apply(convert_condition)\n",
-    "# convert air condition to numeric values with 0 representing no, 1 representing cooling, and 2 representing heating and cooling"
+    "data['Air_Condition'] = data['Air_Condition'].apply(convert_condition)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 235,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#multiple amenities including Bed, Bath, and Air Conditioning"
+    "### Anova Test"
    ]
   },
   {
@@ -1544,6 +1568,22 @@
     "ny_lm = ols('Price ~ Air_Condition + Baths_cleaned + Beds', data=data).fit()\n",
     "table = sm.stats.anova_lm(ny_lm, typ=2)\n",
     "table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The statistical significance of the variables Air Conditioning, Number of Baths, and Number of Beds in explaining the variability in property prices (Price) is being shown here. \n",
+    "\n",
+    "Air Conditioning: The sum squares is 2.200510e+13, the F-statistic is 110.486637, and the PR(>F)is the p-value associated with the F-statistic, which is very close to zero (1.339053e-21). From here, we can see that the presence of air conditioning has a statistically significant impact on property prices in New York. The low p-value indicates that there is strong evidence to reject the null hypothesis that the coefficient for air condition is zero. \n",
+    "\n",
+    "\n",
+    "Number of baths: The sum squares is 6.220911e+13, the F-statistic is 312.349165, and the PR(>F) (p-value) is 9.761773e-46. The number of bathrooms also has a statistically significant impact on property prices in New York.\n",
+    "\n",
+    "Beds: The sum of squares is 1.067585e+12, the F-statistic is 5.360294, and the PR(>F) (p-value) is 0.02142047. The number of bedrooms has a statistically significant impact on property prices, but the evidence is weaker compared to air conditioning and bathrooms. The p-value is slightly above the common significance level of 0.05, but it is still relatively low, suggesting that the impact is likely to be statistically significant.\n",
+    "\n",
+    "In summary, the presence of air conditioning, the number of bathrooms, and the number of bedrooms all have statistically significant impacts on property prices in New York, but the strongest impact is the number of bathrooms."
    ]
   },
   {
@@ -1761,8 +1801,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ANOVA LM - analyze the amenity variables against property price while normalizing for different neighborhoods\n",
-    "Pair plot - Graph out each specific amenity’s impact on property pricing in NY\n"
+    "Now, we incorporate neighbourhoods to see if the different amenities offered differ from different neighborhoods. Because of the anova test above, we know that amenities have statistical significance, meaning they directly affect property prices. In this case, we can assume that the more amenities seen in a neighborhood, the higher the property prices are in that neighborhood. In this case, we can see that New Brighton has the highest amount of baths, making its property more expensive. Additionally, all the neighborhoods with the median of 2 for air conditioning are more expensive than the ones with 0. For example, Mill Basin is more expensive than Midtown. See below for a direct comparison of their prices to show this example:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "25     1089000\n",
+       "65     1089000\n",
+       "105    1089000\n",
+       "145    1089000\n",
+       "185    1089000\n",
+       "225    1089000\n",
+       "265    1089000\n",
+       "305    1089000\n",
+       "345    1089000\n",
+       "385    1089000\n",
+       "Name: Price, dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Neighbourhood'] == 'Mill Basin']['Price']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14     752400\n",
+       "54     752400\n",
+       "94     752400\n",
+       "134    752400\n",
+       "174    752400\n",
+       "214    752400\n",
+       "254    752400\n",
+       "294    752400\n",
+       "334    752400\n",
+       "374    752400\n",
+       "Name: Price, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[data['Neighbourhood'] == 'Midtown']['Price']"
    ]
   },
   {
@@ -1799,18 +1898,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Pair plot - Graph out each specific amenity’s impact on property pricing in NY\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### INTERP"
+   ]
   }
  ],
  "metadata": {
