--- a/project_cleaning_and_import.ipynb
+++ b/project_cleaning_and_import.ipynb
@@ -108,7 +108,7 @@
     "data['Beds'] = data['Beds'].replace('S', 0.5)\n",
     "data['Price'] = data['Price'].str.replace(',', '').astype(int)\n",
     "data['Beds'] = data['Beds'].apply(lambda x: int(x))\n",
-    "data['Year Built'] = data['Year Built'].apply(lambda x : x[-4:])\n",
+    "data['Year Built'] = data['Year Built'].apply(lambda x : int(x[-4:]))\n",
     "data['Beds'] = data['Beds'].replace('S', 0.5)\n",
     "#data['Price'] = data['Price'].apply(lambda x: int(re.search(r'\\d+', x).group()))\n",
     "data['Beds'] = data['Beds'].apply(lambda x : int(x))\n",
