--- a/project1_alina.ipynb
+++ b/project1_alina.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/0k/9ww6ld9955q88m1k2jkfvkvh0000gn/T/ipykernel_10800/4194362795.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/0k/9ww6ld9955q88m1k2jkfvkvh0000gn/T/ipykernel_20179/4194362795.py:2: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  data['Price'] = data['Price'].str.replace('$', '')\n"
      ]
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "[251 rows x 10 columns]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "[251 rows x 10 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +852,7 @@
        "[251 rows x 10 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
        "[251 rows x 10 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
        "SVC()"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1253,7 +1253,7 @@
        "       '1 Bath', '1 Bath', '1 Bath', '1 Bath', '1 Bath'], dtype=object)"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1347,7 +1347,7 @@
        "       '1 Bath', '3 Baths', '1 Bath', '1 Bath', '5 Baths'], dtype='<U7')"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1504,7 +1504,7 @@
        "[83 rows x 4 columns]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1563,7 +1563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1572,7 +1572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1586,10 +1586,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x13c699590>"
+       "<seaborn.axisgrid.PairGrid at 0x141b66c90>"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1624,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1637,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1673,7 +1673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1683,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -1707,6 +1707,62 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8795180722891566\n",
+      "[[26  5  0  0  0  0]\n",
+      " [ 0 35  0  0  0  0]\n",
+      " [ 0  0  4  0  0  0]\n",
+      " [ 0  0  0  6  0  0]\n",
+      " [ 0  0  0  0  2  0]\n",
+      " [ 0  0  0  5  0  0]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      1 Bath       1.00      0.84      0.91        31\n",
+      "     2 Baths       0.88      1.00      0.93        35\n",
+      "     3 Baths       1.00      1.00      1.00         4\n",
+      "     4 Baths       0.55      1.00      0.71         6\n",
+      "     5 Baths       1.00      1.00      1.00         2\n",
+      "     6 Baths       0.00      0.00      0.00         5\n",
+      "\n",
+      "    accuracy                           0.88        83\n",
+      "   macro avg       0.74      0.81      0.76        83\n",
+      "weighted avg       0.85      0.88      0.86        83\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alina/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/alina/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/Users/alina/anaconda3/lib/python3.11/site-packages/sklearn/metrics/_classification.py:1469: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "#add this TO FINAL REPORT\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(accuracy)\n",
+    "\n",
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "print(confusion_matrix(y_test, y_pred))\n",
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1714,15 +1770,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 84.85% (+/- 2.10)\n"
+      "Accuracy: 92.03% (+/- 0.13)\n"
      ]
     }
    ],
